syntax = "proto3";

option go_option = "gen/interceptor/proto/v1";

service HelloService {
    rpc SayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    name = 1;
}