syntax = "proto3";

option go_package = "gen/demo/v1";

service DemoService {
    rpc SayHello(DemoRequest) returns (DemoResponse);
}

message DemoRequest {
    string name = 1;
}

message DemoResponse {
    string message = 1;
}